Tested the jlink commands